# logApp

./: .gitignore  Class_Diagram.drawio  High_level_diagram_logApp.drawio  LogProcessor.ipynb  Logger_with_grafana .drawio  README.md  cron-log-processor-hld.drawio  docker-compose.yml  errors_only.csv  main.py  pyproject.toml  requirements.txt
alloy/: config.alloy
grafana/provisioning/dashboards/: appevolve_analytics.json  dashboards.yaml  error_rates.json  ingested_logs.json  pipeline_health.json
grafana/provisioning/datasources/: datasources.yaml
loki/: local-config.yaml
prometheus/: prometheus.yml
src/: analyze_errors.py  main.py
src/agentic/: runner.py
src/agentic/error_analysis/: agent.py  prompts.py
src/agentic/log_parser/: agent.py  prompts.py
src/agentic/tools/: loki_tools.py
src/config/: settings.py
src/ingestion/: http_ingestion.py  log_type_checker.py
src/ingestion/checkpoint/: state_manager.py
src/ingestion/data_loader/: base_scanner.py  directory_scanner.py
src/ingestion/data_parser/: agentic_log_parser.py  appevolve_log_parser.py  base_log_parser.py  json_log_parser.py  nginx_log_parser.py
src/models/: log_event.py
src/observability/: logging_config.py  metrics.py  tracing.py
src/parser/: agentic_log_parser.py  appevolve_log_parser.py  base_log_parser.py  json_log_parser.py  nginx_log_parser.py  parser_factory.py
src/pipeline/: batch_processor.py  dead_letter_handler.py  parser_worker.py  queues.py
src/processing/: __init__.py  processor.py
src/storage/: loki_sink.py
tempo/: tempo.yml
(+2 files in other folders)
