[project]
name = "logapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.136.1",
    "google-adk>=1.34.0",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.41.1",
    "opentelemetry-sdk>=1.41.1",
    "prometheus-client>=0.25.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyrefly>=1.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "uvicorn>=0.47.0",
]
